refactor: apply formatter

--- a/buildSrc/src/main/groovy/kotlin.gradle
+++ b/buildSrc/src/main/groovy/kotlin.gradle
@@ -18,6 +18,12 @@ test {
     useJUnitPlatform()
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
+}
+
 spotless {
     kotlin {
         ktfmt()
