fix: configuration Kotlin compiler option to use Java 11

--- a/pet-kata/build.gradle
+++ b/pet-kata/build.gradle
@@ -11,3 +11,9 @@ dependencies {
     }
     testImplementation testFixtures(project(':pet-model'))
 }
+
+config.kotlin.configureEach {
+    kotlinOptions {
+        jvmTarget = '11'
+    }
+}
