--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'java'
     id 'groovy-gradle-plugin'
 }
 
@@ -9,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    implementation gradleApi()
     implementation 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21'
     implementation "com.diffplug.spotless:spotless-plugin-gradle:5.8.2"
 }
