add: company projects

--- a/buildSrc/src/main/groovy/kotlin.gradle
+++ b/buildSrc/src/main/groovy/kotlin.gradle
@@ -26,6 +26,12 @@ java {
 
 extensions.create('config', ProjectConfig, project)
 
+config.kotlin.configureEach {
+    kotlinOptions {
+        jvmTarget = '11'
+    }
+}
+
 spotless {
     kotlin {
         ktfmt()
