kotlin-jvm-stdlib-kata-3 Add Solutions for Pet Kata and run tests

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -36,3 +36,6 @@ jobs:
 
       - name: Compile
         run: ./gradlew compileTestKotlin
+
+      - name: Test for solution
+        run: ./gradlew :pet-solution:test
